[package]
name = "group"
description = "Group strings together and filter on each group."
authors = [ "jaschutte" ]
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
